# oop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
include/: BattleVisitor.hpp  ConstIterator.hpp  DynamicArray.hpp  Figure.h  FiguresArray.h  FixedBlockMemoryResource.hpp  GameController.hpp  Hexagon.h  Iterator.hpp  NPC.hpp  NPCFabric.hpp  NPCFactory.hpp  NPCFaсtory.hpp  Pentagon.h  Point.h  Rhomb.h  Six.h  Visitor.hpp  countOnesInRange.h
include/Battlefield/: Battlefield.hpp  Point.hpp
include/Logger/: ConsoleListener.hpp  FileListener.hpp  Listener.hpp  LogManager.hpp
include/Mobs/: Druid.hpp  NPC.hpp  Orc.hpp  Squirrel.hpp
include/Mobs/Visitors/: BattleVisitor.hpp  Visitor.hpp
include/Observer/: ConsoleListener.hpp  NotificationManager.hpp
src/: BattleVisitor.cpp  DynamicArray.tpp  FiguresArray.cpp  FixedBlockMemoryResource.cpp  GameController.cpp  Hexagon.cpp  NPCFactory.cpp  Pentagon.cpp  Point.cpp  Rhomb.cpp  Six.cpp  countOnesInRange.cpp
src/Battlefield/: Battlefield.cpp
src/Logger/: ConsoleListener.cpp  FileListener.cpp  LogManager.cpp
src/Mobs/: Druid.cpp  Orc.cpp  Squirrel.cpp
src/Mobs/Visitors/: BattleVisitor.cpp
test/: BattleTest.hpp  BattlefieldTest.hpp  ConstIteratorTest.hpp  DynamicArrayIntTest.hpp  DynamicArrayStructTest.hpp  FactoryTest.hpp  GameCycleTest.hpp  IteratorTest.hpp  MemoryResourceTest.hpp  NPCTest.hpp  StartTests.cpp  lrTests.cpp  tests01.cpp
